--- a/src/index.html
+++ b/src/index.html
@@ -40,26 +40,73 @@
                 <ul id="nav-main-ul" class="header-for-992px__nav__ul">
                   <li class="header-for-992px__nav__ul__li">
                     <span class="header-for-992px__nav__ul__li_span">home</span>
-                      <ul class="header-for-992px__nav__ul-menu">
-                        <li class="header-for-992px__nav__ul-menu__li">
+                      <ul class="header-for-992px__nav__ul-menu grid-header">
+                        <li class="header-for-992px__nav__ul-menu__li first-li">
+                          <div class="header-for-992px__nav__ul-menu__li__img">
+                            <img src="i/menu-h1.jpg" alt="">
+                          </div>
                           <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 1</a>
                         </li>
-                        <li class="header-for-992px__nav__ul-menu__li">
+                        <li class="header-for-992px__nav__ul-menu__li second-li">
+                          <div class="header-for-992px__nav__ul-menu__li__img">
+                            <img src="i/menu-h2.jpg" alt="">
+                          </div>
                           <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 2</a>
                         </li>
-                        <li class="header-for-992px__nav__ul-menu__li">
+                        <li class="header-for-992px__nav__ul-menu__li third-li">
+                          <div class="header-for-992px__nav__ul-menu__li__img">
+                            <img src="i/menu-h3.jpg" alt="">
+                          </div>
                           <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 3</a>
                         </li>
-                        <li class="header-for-992px__nav__ul-menu__li">
+                        <li class="header-for-992px__nav__ul-menu__li fourth-li">
+                          <div class="header-for-992px__nav__ul-menu__li__img">
+                            <img src="i/menu-h4.jpg" alt="">
+                          </div>
                           <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 4</a>
                         </li>
-                        <li class="header-for-992px__nav__ul-menu__li">
+                        <li class="header-for-992px__nav__ul-menu__li fifth-li">
+                          <div class="header-for-992px__nav__ul-menu__li__img">
+                            <img src="i/menu-h5.jpg" alt="">
+                          </div>
                           <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 5</a>
                         </li>
                       </ul>
                   </li>
                   <li class="header-for-992px__nav__ul__li">
                     <span class="header-for-992px__nav__ul__li_span">shop</span>
+                    <ul class="header-for-992px__nav__ul-menu grid-header">
+                      <li class="header-for-992px__nav__ul-menu__li first-li">
+                        <div class="header-for-992px__nav__ul-menu__li__img">
+                          <img src="i/menu-h1.jpg" alt="">
+                        </div>
+                        <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 1</a>
+                      </li>
+                      <li class="header-for-992px__nav__ul-menu__li second-li">
+                        <div class="header-for-992px__nav__ul-menu__li__img">
+                          <img src="i/menu-h2.jpg" alt="">
+                        </div>
+                        <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 2</a>
+                      </li>
+                      <li class="header-for-992px__nav__ul-menu__li third-li">
+                        <div class="header-for-992px__nav__ul-menu__li__img">
+                          <img src="i/menu-h3.jpg" alt="">
+                        </div>
+                        <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 3</a>
+                      </li>
+                      <li class="header-for-992px__nav__ul-menu__li fourth-li">
+                        <div class="header-for-992px__nav__ul-menu__li__img">
+                          <img src="i/menu-h4.jpg" alt="">
+                        </div>
+                        <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 4</a>
+                      </li>
+                      <li class="header-for-992px__nav__ul-menu__li fifth-li">
+                        <div class="header-for-992px__nav__ul-menu__li__img">
+                          <img src="i/menu-h5.jpg" alt="">
+                        </div>
+                        <a href="#" class="header-for-992px__nav__ul-menu__li_a">home 5</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class="header-for-992px__nav__ul__li">
                     <span class="header-for-992px__nav__ul__li_span">featured</span>
@@ -122,7 +169,7 @@
             <div class="deals__second-p">
               <p class="deals__second-p_text wow fadeInUp">Here to bring your life style to the next level.</p>
             </div>
-            <button class="deals__btn wow zoomIn"><a class="deals__btn__text" href="#">shop now</a></button>
+            <button class="deals__btn"><a class="deals__btn__text" href="#">shop now</a></button>
           </div>
         </div>
         <!-- advatages -->
