--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,131 @@
     <div class="container">
       <header id="header-scroll320px" class="header">
         <!-- menu  -->
-        <div class="top-menu">
+        <div class="top-menu menu-button in-mobile active">
           <div class="top-menu__left">
             <p class="top-menu__left__large"></p>
             <p class="top-menu__left__small"></p>
             <p class="top-menu__left__medium"></p>
           </div>
+
+          
+
+
+
+
+
+
+
+
+
+
+          <!-- <div class="overlay"></div> -->
+          <!-- <nav class="nav header__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link nav__link__drop" href="#">Home</a>
+                <ul class="nav__list nav__list__dropdown nav__link__dropdown dropdown-list dropdown-submenu">
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link mobile-back__link">Back</a>
+                  </li>
+                  <li class="dropdown-submenu__item">
+                    <h2 class="dropdown-submenu__title" href="">Home</h2>
+                    <ul class="dropdown-submenu__list">
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 1</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 2</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 3</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 4</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 5</a>
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li class="dropdown-submenu__item">
+                    <h2 class="dropdown-submenu__title" href="">Shop</h2>
+                    <ul class="dropdown-submenu__list">
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 1</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 2</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 3</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 4</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 5</a>
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li class="dropdown-submenu__item">
+                    <h2 class="dropdown-submenu__title" href="">1</h2>
+                    <ul class="dropdown-submenu__list">
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 1</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 2</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 3</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 4</a>
+                      </li>
+                      <li class="dropdoem-submenu__list-item">
+                        <a href="">home 5</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link__drop" href="#">shop</a>
+                <ul class="nav__list nav__list__dropdown dropdown-list">
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link mobile-back">Back</a>
+                  </li>
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link">1</a>
+                  </li>
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link">2</a>
+                  </li>
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link">3</a>
+                  </li>
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link">4</a>
+                  </li>
+                  <li class="dropdown-list__item mobile-back">
+                    <a href="" class="dropdown-list__link">5</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link__drop" href="#">featured</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link__drop"href="#">pages</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link__drop" href="#">blogs</a>
+              </li>
+            </ul>
+          </nav> -->
           <div class="top-menu__logo">
             <img src="svg/fodry.svg" class="top-menu__logo__img">
           </div>
@@ -29,6 +148,77 @@
           </div>
         </div>
       </header>
+
+      <div class="dark-overlay"></div>
+        <nav class="mobile-navigation">
+            <ul>
+                <li class="has-submenu">
+                    <a class="is-submenu" href="#">Front-end</a>
+                    <ul>
+                        <li class="has-submenu">
+                            <a class="is-submenu" href="#">Graphics</a>
+                            <ul>
+                                <li><a href="#">Adobe Photoshop</a></li>
+                                <li><a href="#">Adobe Illustrator</a></li>
+                                <li><a href="#">Inspiration</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-submenu">
+                            <a class="is-submenu" href="#">Front end</a>
+                            <ul>
+                                <li><a href="#">HTML and CSS</a></li>
+                                <li><a href="#">Java Script</a></li>
+                                <li><a href="#">React </a></li>
+                                <li><a href="#">Vue.js</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-submenu">
+                            <a class="is-submenu" href="#">Web Design</a>
+                            <ul>
+                                <li><a href="#">CSS</a></li>
+                                <li><a href="#">HTML</a></li>
+                                <li><a href="#">Adobe Photoshop</a></li>
+                                <li><a href="#">JavaScript</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-submenu">
+                            <a class="is-submenu" href="#">Photo & Video</a>
+                            <ul>
+                                <li><a href="#">Shooting</a></li>
+                                <li><a href="#">Post-Processing</a></li>
+                                <li><a href="#">Photo Critique</a></li>
+                                <li><a href="#">How-To</a></li>
+                                <li><a href="#">Lighting</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="has-submenu">
+                    <a class="is-submenu" href="#">Design</a>
+                    <ul>
+                        <li><a href="#">Design & Illustration</a></li>
+                        <li><a href="#">Code</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Photo & Video</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Music & Audio</a></li>
+                    </ul>
+                </li>
+                <li class="has-submenu">
+                    <a class="is-submenu" href="#">eBooks</a>
+                    <ul>
+                        <li><a href="#">Design & Illustration</a></li>
+                        <li><a href="#">Code</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Photo & Video</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Music & Audio</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Pricing</a></li>
+            </ul>
+        </nav>
+    </div>
 
       <main class="main">
         
