--- a/src/index.html
+++ b/src/index.html
@@ -523,7 +523,7 @@
                 <img class="header-for-992px__right_img" src="svg/search_white.svg" alt="">
                 <img class="header-for-992px__right_img pop-up-login_img" id="open-pop-up-login" src="svg/person.svg" alt="">
                 <img class="header-for-992px__right_img" id="pop-up-like" src="svg/like.svg" alt="">
-                <img class="header-for-992px__right_img p" id="pop-up-bag" src="svg/bag_white.svg" alt="">
+                <img class="header-for-992px__right_img" id="pop-up-bag" src="svg/bag_white.svg" alt="">
               </div>
             </div>
           </header>
