finishgit add .git add .git add .git add .git add .git add .git add .git add .git add .git add .git add .git add .!

--- a/src/index.html
+++ b/src/index.html
@@ -520,7 +520,7 @@
               </div>
 
               <div class="header-for-992px__right">
-                <img class="header-for-992px__right_img" src="svg/search_white.svg" alt="">
+                <img class="header-for-992px__right_img" id="pop-up-s" src="svg/search_white.svg" alt="">
                 <img class="header-for-992px__right_img pop-up-login_img" id="open-pop-up-login" src="svg/person.svg" alt="">
                 <img class="header-for-992px__right_img" id="pop-up-like" src="svg/like.svg" alt="">
                 <img class="header-for-992px__right_img" id="pop-up-bag" src="svg/bag_white.svg" alt="">
@@ -554,12 +554,33 @@
               </div>
             </div>
           </div>
+
+          <div class="pop-up-s" id="pop-up-s-container">
+            <div class="pop-up-s__container">
+              <div class="pop-up-s__header">
+                <div class="pop-up-s__close" id="pop-up-s-close">
+                  <span class="pop-up-s__icon"><i class="fa-solid fa-xmark pop-up-s__i"></i></span>
+                </div>
+                <div class="pop-up-s__title">
+                  <h2 class="pop-up-s__h2"></h2>
+                </div>
+              </div>
+              <div class="pop-up-s__main">
+                <div class="pop-up-s__box">
+                  <form class="pop-up-s__form">
+                    <input class="pop-up-s__input" type="text" name="search" placeholder="Search...">
+                    <button class="pop-up-s__btn" type="submit"><a class="pop-up-s__btn_a" href="">Find it</a></button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
           
           <div class="pop-up-bag" id="pop-up-bag-container">
             <div class="pop-up-bag__container">
               <div class="pop-up-bag__header">
-                <div class="pop-up-bag__close">
-                  <span class="pop-up-bag__icon" id="pop-up-bag-close"><i class="fa-solid fa-xmark pop-up-bag__i"></i></span>
+                <div class="pop-up-bag__close" id="pop-up-bag-close">
+                  <span class="pop-up-bag__icon"><i class="fa-solid fa-xmark pop-up-bag__i"></i></span>
                 </div>
                 <div class="pop-up-bag__title">
                   <h2 class="pop-up-bag__h2">Shopping Cart</h2>
